feat：隐私管理系统构建
